welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  
  if (estFaceMur())
  {avance(); return {getColorSol()==Color.green} }
  else {return (false)}}
